force-app/main/default/objects/Customer_Extend__c/fields/Our_account_at_the_customer_s_place__c.field-meta.xml
<CustomField>
    <fullName>Our_account_at_the_customer_s_place__c</fullName>
    <description>客户处我方账户</description>
    <label>Our account at the customer&apos;s place</label>
    <length>12</length>
    <type>Text</type>
</CustomField>