force-app/main/default/objects/Customer_Extend__c/fields/Packing_Type__c.field-meta.xml
<CustomField>
    <fullName>Packing_Type__c</fullName>
    <description>MDG主数据：包装类型</description>
    <label>Packing Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>