force-app/main/default/objects/Customer_Extend__c/fields/Payback_Overdue_Number__c.field-meta.xml
<CustomField>
    <fullName>Payback_Overdue_Number__c</fullName>
    <label>Payment Overdue Times</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>