force-app/main/default/objects/Customer_Extend__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers (Billing to)</relationshipLabel>
    <relationshipName>BillingtoResCustomerExtend</relationshipName>
    <type>Lookup</type>
</CustomField>