force-app/main/default/objects/Customer_Extend__c/fields/Payment_Term_Sales__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term</label>
    <referenceTo>Payment_Term__c</referenceTo>
    <relationshipLabel>Customer Extends (Payment Term)</relationshipLabel>
    <relationshipName>Customer_Extends1</relationshipName>
    <type>Lookup</type>
</CustomField>