force-app/main/default/objects/Customer_Extend__c/fields/Price_Group__c.field-meta.xml
<CustomField>
    <fullName>Price_Group__c</fullName>
    <description>MDG主数据：价格组</description>
    <label>Price Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>批发(Wholesale)</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>直销(Direct selling)</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>End User</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Service Provider</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Oem</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Parts SP A</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Parts SP B</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Parts SP C</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Distributer</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Retailer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>