force-app/main/default/objects/Customer_Extend__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <label>Price List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Primary Market(City)</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Secondary Market（County and Township）</label>
            </value>
            <value>
                <fullName>A1</fullName>
                <label>NARTA</label>
            </value>
            <value>
                <fullName>A2</fullName>
                <label>Hisense</label>
            </value>
            <value>
                <fullName>A3</fullName>
                <label>TVS</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>CGGHO</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>CHARVEY</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>CRadioRentals</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>CJBHIFI</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>CBSR</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>CWARetravision</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>CBINGLEE</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>CMYER</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>CMITCHELL</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>CMAKEITMINE</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>CServiceagents</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>CANLONG</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>CBOOM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>