force-app/main/default/objects/Customer_Extend__c/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers (Shpping to)</relationshipLabel>
    <relationshipName>ShppingtoResCustomerExtend</relationshipName>
    <type>Lookup</type>
</CustomField>