force-app/main/default/objects/Customer_Extend__c/fields/Reconciliation_Customer__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Customer__c</fullName>
    <label>Reconciliation Customer</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hisense_Entity__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Reconciliation_Customer</valueSetName>
    </valueSet>
</CustomField>