force-app/main/default/objects/Customer_Extend__c/fields/Related_to_POD__c.field-meta.xml
<CustomField>
    <fullName>Related_to_POD__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Financial required</inlineHelpText>
    <label>Related to POD(Y/N)</label>
    <type>Checkbox</type>
</CustomField>