force-app/main/default/objects/Customer_Extend__c/fields/Sale_View_Freezed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sale_View_Freezed_Reason__c</fullName>
    <label>Sale View Freezed Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>