force-app/main/default/objects/Customer_Extend__c/fields/Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PickList__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Master Data(Team)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PickList__c</referenceTo>
    <relationshipLabel>Customers (Sales Group)</relationshipLabel>
    <relationshipName>CustomersSales_Group_s</relationshipName>
    <type>Lookup</type>
</CustomField>