force-app/main/default/objects/Customer_Extend__c/fields/Selection_Rule__c.field-meta.xml
<CustomField>
    <fullName>Selection_Rule__c</fullName>
    <label>Selection Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>选择规则 001</fullName>
            </value>
            <value>
                <fullName>选择规则 002</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>