force-app/main/default/objects/Customer_Extend__c/fields/Show_Sales__c.field-meta.xml
<CustomField>
    <fullName>Show_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Sales</label>
    <type>Checkbox</type>
</CustomField>