force-app/main/default/objects/Customer_Extend__c/fields/Tax_Classification__c.field-meta.xml
<CustomField>
    <fullName>Tax_Classification__c</fullName>
    <label>Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Zero tax on export</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>VAT stamp 13%</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>General vote 13%</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>VAT stamp 9%</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>General vote 9%</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Electronic Invoice 13%</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>VAT stamp 6%</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>General vote 6%</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>VAT stamp 17%</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>General vote 17%</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Electronic Invoice 17%</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>VAT stamp 16%</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>General vote 16%</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Electronic Invoice 16%</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>VAT stamp 10%</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Common vote 10%</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Electronic Invoice 6%</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Value-added tax common vote 1 percent</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>Value-added tax general vote 3 percent</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>Value-added tax special 1 percent</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Value-added tax special ticket 3 percent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>