force-app/main/default/objects/Customer_Extend__c/fields/Transportation_area__c.field-meta.xml
<CustomField>
    <fullName>Transportation_area__c</fullName>
    <description>MDG主数据：运输区域</description>
    <label>Transportation area</label>
    <length>10</length>
    <type>Text</type>
</CustomField>