force-app/main/default/objects/Customer_Extend__c/fields/TV_lisense__c.field-meta.xml
<CustomField>
    <fullName>TV_lisense__c</fullName>
    <description>MDG主数据：TV lisense</description>
    <label>TV lisense</label>
    <length>20</length>
    <type>Text</type>
</CustomField>