force-app/main/default/objects/Customer_Extend__c/validationRules/Create_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_Check</fullName>
    <active>false</active>
    <description>客户状态为Approved才能创建拓展</description>
    <errorConditionFormula>ISNEW()  &amp;&amp; Text(Customer__r.Approval_Status__c) &lt;&gt; &apos;Approved&apos;</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>The customer status must be Approved before creating customer extend.</errorMessage>
</ValidationRule>