force-app/main/default/objects/Customer_Extend__c/validationRules/Hisense_Entity_Repeat.validationRule-meta.xml
<ValidationRule>
    <fullName>Hisense_Entity_Repeat</fullName>
    <active>false</active>
    <description>扩展Entity不能和主体客户相同</description>
    <errorConditionFormula>TEXT(Hisense_Entity__c) != &apos;8400&apos; &amp;&amp; TEXT(Hisense_Entity__c) != &apos;8420&apos; &amp;&amp; TEXT(Hisense_Entity__c) != &apos;8430&apos; &amp;&amp; TEXT(Hisense_Entity__c) = TEXT(Customer__r.Hisense_Entity__c)</errorConditionFormula>
    <errorDisplayField>Hisense_Entity__c</errorDisplayField>
    <errorMessage>扩展客户不能和原客户Hisense Entity相同</errorMessage>
</ValidationRule>