force-app/main/default/objects/Customer_Extend__c/validationRules/Verify_E_commerce_Customer_Label.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_E_commerce_Customer_Label</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISBLANK(TEXT( Customer__r.E_commerce_Customer_Label__c )),
NOT($Setup.GlobalSetting__c.IgnoreValidation__c ))</errorConditionFormula>
    <errorDisplayField>Approval_Status__c</errorDisplayField>
    <errorMessage>补充客户电商属性字段信息！</errorMessage>
</ValidationRule>