force-app/main/default/objects/Customer_Extend__c/validationRules/View_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>View_Not_Null</fullName>
    <active>true</active>
    <description>视图不能为空</description>
    <errorConditionFormula>AND( !Show_Company__c  , !Show_Sales__c  )</errorConditionFormula>
    <errorDisplayField>Show_Company__c</errorDisplayField>
    <errorMessage>The selection box cannot be empty at the same time！（Show Company ，Show Sales  ）</errorMessage>
</ValidationRule>